<resources>
    <string name="app_name">Jetpack</string>

    <!--  Function  -->
    <string name="encrypted_file">Encrypted File</string>
    <string name="data_binding">Data Binding</string>
    <string name="lifecycles">Lifecycles</string>
    <string name="navigation">Navigation</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>

    <!--  Encrypted File  -->
    <string name="read_encrypted_file">Read Encrypted File</string>
    <string name="input">Input</string>
    <string name="commit">Commit</string>

    <!--  Data Binding  -->
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="toast_detail">Toast Detail</string>
    <string name="adult">Adult</string>
    <string name="next_user">Next User</string>
    <string name="previous_user">Previous User</string>
    <string name="two_way_binding_test">Two Way Binding Test</string>
    <string name="show_check_status">Show Check Status</string>

    <string-array name="random_name">
        <item>Joe</item>
        <item>John</item>
        <item>Jane</item>
        <item>Jim</item>
        <item>Jack</item>
        <item>Jar</item>
        <item>Storm</item>
        <item>Stack</item>
        <item>Alia</item>
        <item>Beck</item>
        <item>Clion</item>
        <item>David</item>
    </string-array>

    <!--  Navigation  -->
    <string name="plant">Plant</string>
    <string name="animal">Animal</string>
    <string name="search">Search</string>

    <!--  Plant fragment  -->
    <string name="arg_plant_name">plant_name</string>
    <string name="do_you_like_x">"Do you like %1$s?"</string>
    <string name="whisper_it_to_you">Whisper it to you</string>

    <!--  Loop Fragment  -->
    <string name="loop">Loop</string>

    <!--  Login Fragment  -->
    <string name="label_user_name">User Name:</string>
    <string name="label_password">Password:</string>
    <string name="sign_up">Sign up</string>

    <!--  Register Fragment  -->
    <string name="about">About</string>

    <!--  Tab Fragment  -->
    <string name="tab">Tab</string>

</resources>
