<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_read_file"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/read_encrypted_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_input_words"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/input"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/btn_commit_input"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_read_file"
        app:layout_constraintTop_toBottomOf="@+id/btn_read_file" />

    <Button
        android:id="@+id/btn_commit_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/commit"
        app:layout_constraintEnd_toEndOf="@+id/btn_read_file"
        app:layout_constraintStart_toEndOf="@+id/et_input_words"
        app:layout_constraintTop_toBottomOf="@+id/btn_read_file" />
</androidx.constraintlayout.widget.ConstraintLayout>